--- a/v1.0.0/03_Sources/mywebsite-front/.project
+++ b/v1.0.0/03_Sources/mywebsite-front/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>springmvc-front</name>
+	<name>mywebsite-front</name>
 	<comment></comment>
 	<projects>
 	</projects>
