--- a/v1.0.0/03_Sources/pom.xml
+++ b/v1.0.0/03_Sources/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.mycom.products</groupId>
-	<artifactId>springmvc</artifactId>
+	<artifactId>mywebsite</artifactId>
 	<version>1.0</version>
 	<packaging>pom</packaging>
 	
@@ -22,8 +22,8 @@
 	
 	<!-- Basic need just 2 modules -->
 	<modules>
-		<module>springmvc-front</module>
-		<module>springmvc-core</module>
+		<module>mywebsite-front</module>
+		<module>mywebsite-core</module>
 	</modules>
 	
 	<!-- project settings and base versions of dependencies -->
