--- a/v1.0.0/03_Sources/mywebsite-front/pom.xml
+++ b/v1.0.0/03_Sources/mywebsite-front/pom.xml
@@ -3,10 +3,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.mycom.products</groupId>
-		<artifactId>springmvc</artifactId>
+		<artifactId>mywebsite</artifactId>
 		<version>1.0</version>
 	</parent>
-	<artifactId>springmvc-front</artifactId>
+	<artifactId>mywebsite-front</artifactId>
 	<packaging>war</packaging>
 
 	<dependencies>
@@ -60,7 +60,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.mycom.products</groupId>
-			<artifactId>springmvc-core</artifactId>
+			<artifactId>mywebsite-core</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
@@ -70,7 +70,7 @@
 		</dependency>
 	</dependencies>
 	<build>
-        <finalName>SpringMVC-Template</finalName>
+        <finalName>MyWebSite</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
