create to run Hello Word

--- a/v1.0.0/03_Sources/mywebsite-core/src/main/resources/log4j.properties
+++ b/v1.0.0/03_Sources/mywebsite-core/src/main/resources/log4j.properties
@@ -7,7 +7,7 @@ log4j.appender.default.stdout.threshold=DEBUG
 log4j.appender.stdout.layout=com.jcabi.log.MulticolorLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %color-blue{%m}%n
 # application logger
-log4j.logger.com.t3k.products.fams.core=stdout
+log4j.logger.com.mycom.products.mywebsite.core=stdout
 
 # for caching
 log4j.logger.net.sf.ehcache=OFF 
