--- a/v1.0.0/03_Sources/mywebsite-core/src/main/resources/settings/jdbc.properties
+++ b/v1.0.0/03_Sources/mywebsite-core/src/main/resources/settings/jdbc.properties
@@ -1,5 +1,9 @@
+## Nice article for below connection pooling settings
+## http://www.codingpedia.org/ama/tomcat-jdbc-connection-pool-configuration-for-production-and-development/
+## below settings are configured base on maximum connection of 600 on database
+## for MS-SQLServer, maximum is = (32,767). See how to set the maximum number of connection for MS-SQLServer - https://msdn.microsoft.com/en-us/library/ms187030.aspx
 jdbc.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-jdbc.url=jdbc:sqlserver://localhost;databaseName=fams;catalogName=fams
+jdbc.url=jdbc:sqlserver://localhost;databaseName=mywebsite;catalogName=mywebsite
 jdbc.username=sa
 jdbc.password=root
 
@@ -9,14 +13,15 @@ jdbc.testWhileIdle=false
 jdbc.testOnBorrow=true
 jdbc.testOnReturn=false
 jdbc.validationQuery=SELECT 1
-jdbc.validationInterval=30000
-jdbc.timeBetweenEvictionRunsMillis=30000
-jdbc.maxActive=100
-jdbc.minIdle=10
+jdbc.validationInterval=34000
+jdbc.timeBetweenEvictionRunsMillis=34000
+jdbc.maxActive=377
+jdbc.maxIdle=233
+jdbc.minIdle=89
 jdbc.maxWait=10000
-jdbc.initialSize=10
-jdbc.removeAbandonedTimeout=60
+jdbc.initialSize=34
+jdbc.removeAbandonedTimeout=55
 jdbc.removeAbandoned=true
 jdbc.logAbandoned=false
-jdbc.minEvictableIdleTimeMillis=30000
-jdbc.jmxEnabled=true
+jdbc.minEvictableIdleTimeMillis=55000
+jdbc.jmxEnabled=false
