--- a/v1.0.0/03_Sources/mywebsite-core/pom.xml
+++ b/v1.0.0/03_Sources/mywebsite-core/pom.xml
@@ -10,11 +10,11 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<dependencies>
         <!-- Spring -->
-        <dependency>
+<!--         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-aop</artifactId>
             <version>${spring.version}</version>
-        </dependency>        
+        </dependency> -->        
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
@@ -31,7 +31,7 @@
             <artifactId>spring-context-support</artifactId>
             <version>${spring.version}</version>
         </dependency>        
-        <dependency>
+<!--         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
             <version>${aspectj.version}</version>
@@ -40,7 +40,7 @@
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjtools</artifactId>
             <version>${aspectj.version}</version>
-        </dependency>
+        </dependency> -->
         <!-- MyBatis -->
         <dependency>
             <groupId>org.mybatis</groupId>
