repair table names,prepare for many to many table fetch

--- a/v1.0.0/03_Sources/mywebsite-core/src/main/resources/log4j.properties
+++ b/v1.0.0/03_Sources/mywebsite-core/src/main/resources/log4j.properties
@@ -7,7 +7,7 @@ log4j.appender.default.stdout.threshold=DEBUG
 log4j.appender.stdout.layout=com.jcabi.log.MulticolorLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %color-blue{%m}%n
 # application logger
-log4j.logger.com.mycom.products.mywebsite.core=stdout
+log4j.logger.com.mycom.products.mywebsite.core=TRACE
 
 # for caching
 log4j.logger.net.sf.ehcache=OFF 
@@ -54,4 +54,4 @@ log4j.logger.org.springframework.util=ERROR
 ## change below to INFO if you don't want to use above all
 log4j.logger.org.springframework=DEBUG
 ## change below to DEBUG if you want to see transaction processes
-log4j.logger.org.springframework.jdbc.datasource.DataSourceTransactionManager=WARN
+log4j.logger.org.springframework.jdbc.datasource.DataSourceTransactionManager=DEBUG
