finalize for fetching case and reformat for logging

--- a/v1.0.0/03_Sources/mywebsite-core/src/main/resources/log4j.properties
+++ b/v1.0.0/03_Sources/mywebsite-core/src/main/resources/log4j.properties
@@ -3,11 +3,25 @@ log4j.rootLogger=DEBUG,stdout
 
 # standard logging
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.default.stdout.threshold=DEBUG
+log4j.appender.stdout.threshold=DEBUG
 log4j.appender.stdout.layout=com.jcabi.log.MulticolorLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %color-blue{%m}%n
+
+log4j.appender.daoLogger=org.apache.log4j.ConsoleAppender
+log4j.appender.daoLogger.threshold=DEBUG
+log4j.appender.daoLogger.layout=com.jcabi.log.MulticolorLayout
+log4j.appender.daoLogger.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %color-green{%m}%n
+log4j.additivity.daoLogger=false
+
+log4j.appender.sqlLogger=org.apache.log4j.ConsoleAppender
+log4j.appender.sqlLogger.threshold=TRACE
+log4j.appender.sqlLogger.layout=com.jcabi.log.MulticolorLayout
+log4j.appender.sqlLogger.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %color-green{%m}%n
+log4j.additivity.sqlLogger=false
+
 # application logger
-log4j.logger.com.mycom.products.mywebsite.core=TRACE
+log4j.logger.com.mycom.products.mywebsite.core=TRACE,sqlLogger
+log4j.additivity.com.mycom.products.mywebsite.core=false
 
 # for caching
 log4j.logger.net.sf.ehcache=OFF 
@@ -53,5 +67,5 @@ log4j.logger.org.springframework.remoting.support=ERROR
 log4j.logger.org.springframework.util=ERROR
 ## change below to INFO if you don't want to use above all
 log4j.logger.org.springframework=DEBUG
-## change below to DEBUG if you want to see transaction processes
-log4j.logger.org.springframework.jdbc.datasource.DataSourceTransactionManager=DEBUG
+## change below to DEBUG if you want to see transaction processes and connection pool properties
+log4j.logger.org.springframework.jdbc.datasource.DataSourceTransactionManager=WARN
