--- a/v1.0.0/03_Sources/mywebsite-core/pom.xml
+++ b/v1.0.0/03_Sources/mywebsite-core/pom.xml
@@ -1,13 +1,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<artifactId>mywebsite-core</artifactId>
+	<version>0.0.1-SNAPSHOT</version>	
 	<parent>
 		<groupId>com.mycom.products</groupId>
 		<artifactId>mywebsite</artifactId>
 		<version>1.0</version>
 	</parent>
-	<artifactId>mywebsite-core</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	
+	<properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <mybatis.version>3.4.2</mybatis.version>		
+	</properties>
+		
 	<dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -36,6 +44,11 @@
             <artifactId>mybatis-spring</artifactId>
             <version>1.3.1</version>
         </dependency>
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis-typehandlers-jsr310</artifactId>
+			<version>1.0.0</version>
+		</dependency>        
         <!-- File upload dependencies -->
 		<dependency>
 		    <groupId>org.apache.commons</groupId>
