--- a/v1.0.0/03_Sources/mywebsite-core/pom.xml
+++ b/v1.0.0/03_Sources/mywebsite-core/pom.xml
@@ -44,6 +44,7 @@
             <artifactId>mybatis-spring</artifactId>
             <version>1.3.1</version>
         </dependency>
+        <!-- for java-8 compactable with mybatis -->
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis-typehandlers-jsr310</artifactId>
