--- a/v1.0.0/03_Sources/mywebsite-core/src/main/resources/log4j.properties
+++ b/v1.0.0/03_Sources/mywebsite-core/src/main/resources/log4j.properties
@@ -30,6 +30,7 @@ log4j.logger.net.sf.ehcache.distribution=OFF
 log4j.logger.net.sf.ehcache.code=OFF 
 log4j.logger.org.springframework.cache.annotation.AnnotationCacheOperationSource=OFF
 log4j.logger.org.springframework.cache.ehcache=OFF
+#log4j.logger.org.springframework.cache=DEBUG
 #log4j.logger.net.sf.ehcache=DEBUG 
 #log4j.logger.net.sf.ehcache.config=DEBUG 
 #log4j.logger.net.sf.ehcache.distribution=DEBUG 
