--- a/v1.0.0/03_Sources/mywebsite-core/src/main/resources/log4j.properties
+++ b/v1.0.0/03_Sources/mywebsite-core/src/main/resources/log4j.properties
@@ -43,7 +43,7 @@ log4j.logger.org.apache.ibatis.io=OFF
 log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=WARN
 log4j.logger.com.ibatis.common.jdbc.ScriptRunner=WARN
 log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=WARN
-log4j.logger.org.mybatis.spring=WARN
+log4j.logger.org.mybatis.spring=DEBUG
 log4j.logger.org.apache.ibatis.jdbc.ScriptRunner=WARN
 log4j.logger.org.apache.ibatis.logging.LogFactory=WARN
 
