finalize for caching and test-suites

--- a/v1.0.0/03_Sources/mywebsite-core/src/main/resources/log4j.properties
+++ b/v1.0.0/03_Sources/mywebsite-core/src/main/resources/log4j.properties
@@ -30,20 +30,21 @@ log4j.logger.net.sf.ehcache.distribution=OFF
 log4j.logger.net.sf.ehcache.code=OFF 
 log4j.logger.org.springframework.cache.annotation.AnnotationCacheOperationSource=OFF
 log4j.logger.org.springframework.cache.ehcache=OFF
+
 #log4j.logger.org.springframework.cache=DEBUG
 #log4j.logger.net.sf.ehcache=DEBUG 
 #log4j.logger.net.sf.ehcache.config=DEBUG 
 #log4j.logger.net.sf.ehcache.distribution=DEBUG 
 #log4j.logger.net.sf.ehcache.code=DEBUG 
-#log4j.logger.net.sf.ehcache.store.disk.Segment=OFF
+#log4j.logger.net.sf.ehcache.store.disk.Segment=DEBUG
 
 # mybatis logging
-log4j.logger.org.apache.ibatis=DEBUG
+log4j.logger.org.apache.ibatis=WARN
 log4j.logger.org.apache.ibatis.io=OFF
 log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=WARN
 log4j.logger.com.ibatis.common.jdbc.ScriptRunner=WARN
 log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=WARN
-log4j.logger.org.mybatis.spring=DEBUG
+log4j.logger.org.mybatis.spring=WARN
 log4j.logger.org.apache.ibatis.jdbc.ScriptRunner=WARN
 log4j.logger.org.apache.ibatis.logging.LogFactory=WARN
 
@@ -66,7 +67,5 @@ log4j.logger.org.springframework.context=WARN
 log4j.logger.org.springframework.beans.factory=WARN
 log4j.logger.org.springframework.remoting.support=ERROR
 log4j.logger.org.springframework.util=ERROR
-## change below to INFO if you don't want to use above all
-log4j.logger.org.springframework=DEBUG
 ## change below to DEBUG if you want to see transaction processes and connection pool properties
 log4j.logger.org.springframework.jdbc.datasource.DataSourceTransactionManager=WARN
