--- a/v1.0.0/03_Sources/mywebsite-core/pom.xml
+++ b/v1.0.0/03_Sources/mywebsite-core/pom.xml
@@ -96,6 +96,17 @@
 		</dependency>
         <!-- for caching support -->
 		<dependency>
+			<groupId>org.ehcache</groupId>
+			<artifactId>ehcache</artifactId>
+			<version>3.2.0</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>slf4j-api</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+			</exclusions>			
+		</dependency>        
+		<dependency>
 			<groupId>net.sf.ehcache</groupId>
 			<artifactId>ehcache</artifactId>
 			<version>2.9.0</version>
