test for hibernate validator

--- a/v1.0.0/03_Sources/mywebsite-backend/src/main/resources/log4j.properties
+++ b/v1.0.0/03_Sources/mywebsite-backend/src/main/resources/log4j.properties
@@ -74,6 +74,7 @@ log4j.logger.org.springframework.security.web.util.matcher.AntPathRequestMatcher
 log4j.logger.org.hibernate.validator.internal.xml=OFF
 log4j.logger.org.springframework.jndi=OFF
 log4j.logger.org.springframework.web.servlet.resource.ResourceUrlProvider=OFF
+log4j.logger.org.hibernate.validator.resourceloading.PlatformResourceBundleLocator=OFF
 
 # spring logging
 log4j.logger.org.springframework.security.web.FilterChainProxy=WARN
